@@ -2598,30 +2598,12 @@ argument_list|)
 decl_stmt|;
 if|if
 condition|(
+operator|!
 name|m
 operator|.
 name|matches
 argument_list|()
 condition|)
-block|{
-name|String
-name|prefix
-init|=
-name|m
-operator|.
-name|group
-argument_list|(
-literal|1
-argument_list|)
-decl_stmt|;
-name|host
-operator|=
-name|prefix
-operator|+
-name|host
-expr_stmt|;
-block|}
-else|else
 block|{
 name|host
 operator|=
