@@ -204,6 +204,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|HashMap
@@ -227,6 +237,18 @@ operator|.
 name|util
 operator|.
 name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|TimeoutException
 import|;
 end_import
 
@@ -1304,6 +1326,181 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|cc
+operator|!=
+literal|null
+condition|)
+block|{
+name|cc
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+name|server
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testGetHostName
+specifier|public
+name|void
+name|testGetHostName
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|zkDir
+init|=
+name|dataDir
+operator|.
+name|getAbsolutePath
+argument_list|()
+operator|+
+name|File
+operator|.
+name|separator
+operator|+
+literal|"zookeeper/server1/data"
+decl_stmt|;
+name|CoreContainer
+name|cc
+init|=
+literal|null
+decl_stmt|;
+name|ZkTestServer
+name|server
+init|=
+operator|new
+name|ZkTestServer
+argument_list|(
+name|zkDir
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|server
+operator|.
+name|run
+argument_list|()
+expr_stmt|;
+name|AbstractZkTestCase
+operator|.
+name|tryCleanSolrZkNode
+argument_list|(
+name|server
+operator|.
+name|getZkHost
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|AbstractZkTestCase
+operator|.
+name|makeSolrZkNode
+argument_list|(
+name|server
+operator|.
+name|getZkHost
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|cc
+operator|=
+name|getCoreContainer
+argument_list|()
+expr_stmt|;
+name|ZkController
+name|zkController
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|zkController
+operator|=
+operator|new
+name|ZkController
+argument_list|(
+name|cc
+argument_list|,
+name|server
+operator|.
+name|getZkAddress
+argument_list|()
+argument_list|,
+name|TIMEOUT
+argument_list|,
+literal|10000
+argument_list|,
+literal|"http://127.0.0.1"
+argument_list|,
+literal|"8983"
+argument_list|,
+literal|"solr"
+argument_list|,
+literal|0
+argument_list|,
+literal|true
+argument_list|,
+operator|new
+name|CurrentCoreDescriptorProvider
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|List
+argument_list|<
+name|CoreDescriptor
+argument_list|>
+name|getCurrentDescriptors
+parameter_list|()
+block|{
+comment|// do nothing
+return|return
+literal|null
+return|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+name|fail
+argument_list|(
+literal|"ZkController did not normalize host name correctly"
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|zkController
+operator|!=
+literal|null
+condition|)
+name|zkController
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+finally|finally
+block|{
 if|if
 condition|(
 name|cc
